Ver.1.9.0:
+ added support of several custom commands
+ added hdd speed label
+ added actions to context menu (open readme and run ksysguard)
- removed doubleclick event

Ver.1.8.3:
+ added Spanish translation (thanks to Ernesto Avilés Vzqz)
+ added readme to the package

Ver.1.8.2:
+ added different temperature units (Farenheit and Kelvin)

Ver.1.8.1:
* change pkg update time to hour

Ver.1.8.0:
+ added scrollbar to configuration interface
+ added AC lines configuration
+ added $hddmbN, %hddgbN tags
+ added support of ps ($ps, $pscount, $pstotal tags)
+ added support of package managers ($pkgcountN tags)
* refactoring of DataEngine

Ver.1.7.4:
+ added support more than 10 tags in cpu, cpuclock, hdd, hddtemp, temp labels
- format bug fixes
* changes in custom uptime format

Ver.1.7.3:
+ added tags $memgb, $swapgb
+ added readme directory
+ added french translation (@Mermouy)
- fix tooltip for custom uptime format
- fix #12
* more refactoring to the god of refactoring
* network device update interval now is 30*interval
* $swap, $swapmb and $swapgb tags now work simultaneously ($mem* tags too)
* player_name now has str type

Ver.1.7.2:
+ added tags $dd, $d, $hh, $h, $mm, $m to custom uptime format
+ added scalling to tooltips
+ added dataengine configuration from ptm
+ added custom command to dataengine
- removed custom command from ptm
- removed tags $ds, $hs, $ms

Ver.1.7.1:
- removed error label
* fix bug with zero values in tooltip

Ver.1.7.0:
+ added support of several tags in temperature label
+ added tags $cpuN, $cpuclN, $hddN, $tempN, $hddtempN, $up, $down
+ added label with custom command
+ added tooltips for CPU, CPU clock, memory, swap and network labels
- removed tags @@...@@, $temp, $ccpu, $ccpucl, $net
* changes in settings
* ptm now does not require net-tools
* refactoring

Ver.1.6.1:
+ added support of several devices in hddtemp label
- fixed #6

Ver.1.6.0:
+ added $custom tag to time and uptime labels (#8)
+ russian translation
- fixed #6, #10