@@ -1,7 +1,8 @@
 Вер.1.9.0:
-+ добавлена поддержка нескольких кастомных команд
-+ добавлено поле скорости hdd
++ добавлена поддержка нескольких кастомных команд ($customN)
++ добавлено поле скорости hdd ($hddrN, $hddwN)
 + добавлены действия в контекстное меню (открыть readme и запустить ksysguard)
+* исправлен парсинг поля pkg
 - убрано событие по двойному клику
 
 Вер.1.8.3:
